Thu Apr  5 19:09:47 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug where $() vars that appeared after other $() vars
          would not be expanded with template values.

          Also, added a performance enhancement when replacing $() vars.

Thu Mar 29 13:40:30 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug where $() vars would not be expanded with template
          values if no relative replacement values were supplied (either
          implicitly through default.rel or explicitly through -relative).

Mon Mar 26 16:22:00 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Added additional code to detect circular dependencies.  Without
          this, there are situations where MPC will go into an infinite
          loop.

        * templates/nmake.mpd:

          Change to look for the dependency generator in MPC_ROOT first and
          then the other places.  Also modified the message to point the
          user to MPC instead of svn for a dependency generator.

Thu Mar 22 17:48:27 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where using the -name_modifier would end up causing
          the workspace file names to contain previous workspace names.

Thu Mar 22 14:36:53 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * depgen.pl:
        * modules/Depgen/DependencyEditor.pm:
        * modules/Depgen/DependencyGenerator.pm:
        * modules/Depgen/DependencyWriter.pm:
        * modules/Depgen/DependencyWriterFactory.pm:
        * modules/Depgen/Driver.pm:
        * modules/Depgen/MakeDependencyWriter.pm:
        * modules/Depgen/MakeObjectGenerator.pm:
        * modules/Depgen/NMakeDependencyWriter.pm:
        * modules/Depgen/NMakeObjectGenerator.pm:
        * modules/Depgen/ObjectGenerator.pm: