@@ -1,3 +1,12 @@
+Mon Apr 16 15:00:49 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/MakeProjectCreator.pm:
+        * modules/ProjectCreator.pm:
+        * templates/make.mpd:
+        * templates/makedll.mpt:
+
+          Added support for using gcj with the 'java' language type.
+
 Thu Apr  5 19:09:47 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/Creator.pm:
